:sparkles: job done

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <section id="camera">
   <h2>Capteurs de parties du corps</h2>
   <h3>Lachez vos meilleurs pas de danses</h3>
+  <h4>(Tout votre corps doit figurer sur la caméra)</h4>
 </section>
 
 <script src="poseNet.js"></script>
